--- a/app/scss/base/ui.scss
+++ b/app/scss/base/ui.scss
@@ -392,7 +392,7 @@
     height: 1px;
     background: #312930;
     display: block;
-    right: 0;
+    right: -5px;
     position: relative;
     &:after,
     &::before {
