--- a/app/templates/pages/404.pug
+++ b/app/templates/pages/404.pug
@@ -4,7 +4,7 @@ include ../modules/footer.pug
 include ../modules/header.pug
 
 block variables
-  -var pageTitle='Где купить'
+  -var pageTitle='Страница не найдена'
 
 
 block content
