--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -76,6 +76,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
+  min-height: 100vh;
   box-sizing: border-box;
   margin: 0 auto;
   position: relative;
