--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -34,7 +34,7 @@ block content
         h2.main-about-header-description Мы хотим привить миллионам людей вести здоровый образ жизни, донести до каждого чистоту горного воздуха и воды в наших сырах.
         .image
           img(src="./images/main-about-bg.png")
-          +icon('print-main', 'svg').print
+          +icon('print-main', 'svg').print.scrollRotate
   section.main-about-info
     .main-about-info-box
       .about-info-el.gifimage 
