--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -54,7 +54,7 @@ block content
           +link('Что такое НМПТ', '#', 'true')
       .promo-box-bottom
         .bottom-img
-          +icon('print-main', 'svg')
+          +icon('print-main', 'svg').scrollRotate
           .mountains
             img.mouseParalax(src="./images/mountains.png" alt="ГоРы")
             .mountains-cheese.mouseParalax
