--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -46,7 +46,7 @@ block content
         .content.prevs-box
           .prevs-box-info
             h2 Имеем эксклюзивное право на производство Адыгейского сыра и производим по технологии НМПТ
-            +icon('prevslogo', 'svg')
+            +icon('prevslogo', 'svg').scrollRotate
           .prevs-box-row
             +prevs-row-el(getData('pages/partners/prevs'))
             .prevs-box-row-el
