--- a/app/scss/components/products/product.scss
+++ b/app/scss/components/products/product.scss
@@ -126,7 +126,14 @@
             object-fit:cover;
           }
         }
-
+        &.pageLoaded{
+          .addons{
+            .cloud-1, .cloud-2, .cloud-3, .rhombus-1, .rhombus-2, .print{
+              transform: translateX(0);
+            }
+          }
+          
+        }
         .addons {
           height: 100%;
           width: 100%;
@@ -140,29 +147,39 @@
           .cloud-1 {
             left: 0%;
             top: 20%;
+            transform: translateX(-200px);
+            transition: 0.8s ease-out;
           }
 
           .cloud-2 {
             font-size: 6px;
             bottom: 13%;
             right: 9%;
+            transform: translateX(-550px);
+            transition: 1.1s ease-out;
           }
 
           .cloud-3 {
             bottom: 44%;
             right: 15%;
+            transform: translateX(-680px);
+            transition: 1s ease-out;
           }
 
           .rhombus-1 {
             font-size: 8px;
             left: 0%;
             bottom: 30%;
+            transform: translateX(-150px);
+            transition: 0.9s ease-out;
           }
 
           .rhombus-2 {
             font-size: 4px;
             left: 12%;
             bottom: 24%;
+            transform: translateX(-300px);
+            transition: 0.8s ease-out;
           }
 
           .print {
