--- a/app/templates/pages/product.pug
+++ b/app/templates/pages/product.pug
@@ -15,7 +15,7 @@ block content
       .main-product-box
         .product-item.fixed-base
           .fixed-item
-            .product-item-img
+            .product-item-img.onLoad
               .image
                 img(src="./images/img-products-2-min.png")
                 img(src="./images/img-products-2-min.png")
@@ -25,7 +25,7 @@ block content
                 +icon('cloud-2', 'svg').cloud-3
                 +icon('rhombus', 'svg').rhombus-1
                 +icon('rhombus', 'svg').rhombus-2
-                +icon('print-product', 'svg').print
+                +icon('print-product', 'svg').print.scrollRotate
         .content-section
           .pagination
             a.pagination-back Продукция
