[UPDATE] Обработчик для формы связи

--- a/app/scss/base/ui.scss
+++ b/app/scss/base/ui.scss
@@ -258,6 +258,10 @@
     }
   }
 
+  textarea {
+    resize: none; //возможность ресайза
+  }
+
   input,
   textarea,
   .select2-selection__rendered {
