--- a/app/templates/modules/forms.pug
+++ b/app/templates/modules/forms.pug
@@ -30,13 +30,13 @@ mixin askQuestionForm
       .contact-box-content
         form.contact-box-form#askQuestionForm
           .contact-box-form-el
-            +inputField('text', 'name', 'Ваше имя')#name
-            +inputField('text', 'phone', 'Ваш телефон', null)#phone
-            +inputField('email', 'email', 'Ваша почта для ответа', false)#email
+            +inputField('text', 'name', 'Ваше имя')
+            +inputField('text', 'phone', 'Ваш телефон', null)
+            +inputField('text', 'email', 'Ваша почта для ответа', false)
           .contact-box-form-el
-            +textarea('question', '29', '10', 'Ваш вопрос', 'необязательно')#question
+            +textarea('question', '29', '10', 'Ваш вопрос', 'необязательно')
           .contact-box-form-el
-            +checkbox('agree', 'agree', 'Согласие на обработку персональных данных в соответствии с политикой конфиденциальности')#agree
+            +checkbox('agree', 'agree', 'Согласие на обработку персональных данных в соответствии с политикой конфиденциальности')
           .contact-box-form-el
             +buttonSubmit('Отправить')
         .contact-box-success
