--- a/app/templates/modules/footer.pug
+++ b/app/templates/modules/footer.pug
@@ -33,7 +33,7 @@ mixin footer()
         .footer-box-nav-tel
           .footer-box-nav-tel-group
             .footer-box-nav-tel-group-desc Служба поддержки потребителей
-            .footer-box-nav-tel-group-number 8 800 250-93-93
+            a.footer-box-nav-tel-group-number(href="tel:88002509393") 8 800 250-93-93
           +link('Задать вопрос', '#')
         .footer-box-nav-adderlinks
           a(href="#") Политика конфиденциальности
