--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -33,7 +33,7 @@ mixin header
         .header-buttom-help
           .left
             .left-desc Служба поддержки потребителей
-            .left-number 8 800 250-93-93
+            a.left-number(href="tel:88002509393") 8 800 250-93-93
             +link('Задать вопрос', '#')
           .right
             .right-desc Мы в социальных сетях
