--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -97,6 +97,6 @@ block content
             .description-award
               .title I Международный форум «Салон сыра»
               +link('Сыр Косичка «Гиагинский» копченый', '#', 'true')
-  +about('Партнерам').bg-white.about-invert          
+  +about('Партнерам', './partners.html').bg-white.about-invert          
   +subscriptionForm().bg-white
   +footer().bg-white
