--- a/app/templates/pages/howdo.pug
+++ b/app/templates/pages/howdo.pug
@@ -68,6 +68,6 @@ block content
       .image-howdo
         img(src="./images/main-howdo-bg-5.png")
       .number-stage 05
-  +about('Перейти в каталог').bg-additional
+  +about('Перейти в каталог', './catalog.html').bg-additional
   +subscriptionForm().bg-additional
   +footer().bg-additional
