[FIX] Исправления на странице 'Партнерам'

--- a/app/templates/modules/wherebuy.pug
+++ b/app/templates/modules/wherebuy.pug
@@ -6,6 +6,6 @@ mixin wherebuy
           .title Где купить?
           .desc Мы представлены в самые крупных и популярных торговых сетях в России.
         .right
-          +link('Продробнее', '#', 'true')
+          +link('Подробнее', '#', 'true')
     .shopsbg-marquee
       .shops
