--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -42,6 +42,7 @@ block content
         +info-box-el(getData('pages/partners/info-partners'))
         .info-box-details
           a(href="#details") Скачать презентацию
+            span.bottomLines
     section.prevs
         .content.prevs-box
           .prevs-box-info
