--- a/app/scss/components/partners/main.scss
+++ b/app/scss/components/partners/main.scss
@@ -284,23 +284,31 @@ section {
       font-size: 20px;
       font-family: 'CeraPro';
       position: relative;
-      z-index: 1;
+      z-index: 1; 
 
-      &::before {
-        position: absolute;
-        content: '';
-        background: url('../images/download-presentation-border.svg');
-        width: 209px;
-        height: 10px;
+      & > .bottomLines {
+        width: 100%;
+        height: 21px;
         display: block;
-        right: 50%;
-        bottom: -50%;
-        transform: translateX(50%);
-        margin-top: 10px;
-        background-repeat: no-repeat;
-         
-        @include screen('sm', 'min') {
-          transform: translateX(0%);
+        position: absolute;
+        left: 0;
+        top: 100%;
+
+        &:before {
+          content: "";
+          display: block;
+          width: 209px;
+          height: 100%;
+          position: absolute;
+          background-size: cover;
+          background: url("../images/info-box-details-dashed.svg");
+          background-repeat: no-repeat;
+          top: 0;
+
+          @include screen('xs', 'max') {
+            left: 80%;
+            transform: translateX(-100%);
+          }
         }
       }
     }
