[UPDATE/DEPLOY] Фикс списка магазинов, деплой

--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 409.3em;
+    background-size: 40.3em 411.2em;
 }
 
 .no-svg .svg-icon:before {
@@ -431,8 +431,17 @@
 
 
 
-  .svg-icon.svg-promo-box-top-text:before {
+  .svg-icon.svg-printer:before {
       background-position: 0em -326.6em;
+      width: 2.1em;
+      height: 1.9em;
+  }
+
+
+
+
+  .svg-icon.svg-promo-box-top-text:before {
+      background-position: 0em -328.5em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -441,7 +450,7 @@
 
 
   .svg-icon.svg-recept-product-print:before {
-      background-position: 0em -340em;
+      background-position: 0em -341.9em;
       width: 11.5em;
       height: 11.2em;
   }
@@ -450,7 +459,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -351.2em;
+      background-position: 0em -353.1em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -459,7 +468,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -364.6em;
+      background-position: 0em -366.5em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -468,7 +477,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -372.5em;
+      background-position: 0em -374.4em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -477,7 +486,7 @@
 
 
   .svg-icon.svg-srt-paper-plane:before {
-      background-position: 0em -377.8em;
+      background-position: 0em -379.7em;
       width: 2.8em;
       height: 2.8em;
   }
@@ -486,7 +495,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -380.6em;
+      background-position: 0em -382.5em;
       width: 10.3em;
       height: 7em;
   }
@@ -495,7 +504,7 @@
 
 
   .svg-icon.svg-str-right-light-color:before {
-      background-position: 0em -387.6em;
+      background-position: 0em -389.5em;
       width: 4.3em;
       height: 2.3em;
   }
@@ -504,7 +513,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -389.9em;
+      background-position: 0em -391.8em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -513,7 +522,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -393.2em;
+      background-position: 0em -395.1em;
       width: 2em;
       height: 1.8em;
   }
@@ -522,7 +531,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -395em;
+      background-position: 0em -396.9em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -531,7 +540,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -396.6em;
+      background-position: 0em -398.5em;
       width: 12.1em;
       height: 11em;
   }
@@ -540,7 +549,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -407.6em;
+      background-position: 0em -409.5em;
       width: 2.8em;
       height: 1.7em;
   }
