--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -19,12 +19,10 @@
         position: relative;
 
         @include screen('lg', 'max') {
-          transform: scale(0.8);
-          transform-origin: right center; 
+
         }
 
         @include screen('md', 'max') {
-          transform: scale(1);
           margin: 0 auto;
           margin-bottom: 150px;
           width: 80%;
@@ -34,6 +32,10 @@
         .group-product {
           height: 100%;
           padding-bottom: 120px;
+
+          @include screen('lg', 'max') {
+            padding-bottom: 60px;
+          }
         }
 
         span {
@@ -46,7 +48,6 @@
           content: '';
           display: block;
           position: absolute;
-          left: -50px;
           top: 0;
           z-index: 1;
 
@@ -55,18 +56,27 @@
             height: 80%;
             margin-left: 20px;
           }
+
+          @include screen('xs', 'max') {
+            width: 100%;
+            height: 100%;
+          }
         }
       }
 
       &-image {
-        transform: rotate(12deg) translateX(0);
         z-index: 10;
         position: relative;
+        left: 10%;
 
         img {
           position: relative;
-          width: 70%;
+          width: 244px;
           height: auto;
+
+          @include screen('md', 'max') {
+            width: 60%;
+          }
 
           &:last-child {
             left: 25%;
@@ -84,6 +94,10 @@
         position: relative;
         width: 60%;
         margin-top: 10%!important;
+
+        @include screen('lg', 'max') {
+          width: 100%;
+        }
 
         &:before {
           background-image: url('../images/shadow-products.svg');
@@ -107,7 +121,7 @@
         position: absolute;
         top: 0%;
         z-index: 10;
-        left: -10%;
+        left: 5%;
       }
     }
     
@@ -130,6 +144,67 @@
         justify-content: space-between;
         margin-top: 80px;
         margin-bottom: 40px;
+        align-items: center;
+
+        .left {
+          display: flex;
+          align-items: center;
+
+          .recept-social-links {
+            display: flex;
+            margin-left: 30px;
+
+            @include screen('sm', 'max') {
+              display: none;
+            }
+
+            a.social-link {
+              width: 62px;
+              height: 62px;
+              margin: 10px 0;
+              border-radius: 50%;
+              background: #fff;
+              border: 1px solid #312930;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-right: 10px;
+              transition: all 0.3s;
+
+              i {
+                filter: brightness(0);
+              }
+
+              &:hover {
+                background: #312930;
+                i {
+                  filter: brightness(0%) invert(1);
+                }
+              }
+            }
+          }
+        }
+
+        .right {
+          .print-page {
+            display: flex;
+            flex-direction: row-reverse;
+            transition: color 0.3s;
+
+            i {
+              margin-right: 10px;
+              filter: brightness(0);
+              transition: filter 0.3s;
+            }
+
+            &:hover {
+              color: #EE7754;
+              i {
+                filter: brightness(100%);
+              }
+            }
+          }
+        }
 
         @include screen('md', 'max') {
           position: absolute;
