--- a/app/templates/modules/wherebuy.pug
+++ b/app/templates/modules/wherebuy.pug
@@ -8,4 +8,24 @@ mixin wherebuy
         .right
           +link('Подробнее', '#', 'true')
     .shopsbg-marquee
-      .shops
+      .shopsbg-list
+        a.shopsbg-item(href="https://www.okeydostavka.ru/", target="_blank")
+          img(src="./images/wherebuy/image-shops-1.png", alt="Окей")
+        a.shopsbg-item(href="https://lenta.com/", target="_blank")
+          img(src="./images/wherebuy/image-shops-5.png", alt="Лента")
+        a.shopsbg-item(href="https://magnit-info.ru/", target="_blank")
+          img(src="./images/wherebuy/image-shops-2.png", alt="Магнит")
+        a.shopsbg-item(href="https://www.metro-cc.ru/", target="_blank")
+          img(src="./images/wherebuy/image-shops-3.png", alt="Метро")
+        a.shopsbg-item(href="https://dixy.ru/", target="_blank")
+          img(src="./images/wherebuy/image-shops-7.png", alt="Дикси")
+        a.shopsbg-item(href="https://www.auchan.ru/", target="_blank")
+          img(src="./images/wherebuy/image-shops-6.png", alt="Ашан")
+        a.shopsbg-item(href="https://5ka.ru", target="_blank")
+          img(src="./images/wherebuy/image-shops-9.svg", alt="Пятерочка")
+        a.shopsbg-item(href="https://www.okeydostavka.ru/", target="_blank")
+          img(src="./images/wherebuy/image-shops-1.png", alt="Окей")
+        a.shopsbg-item(href="https://www.auchan.ru/", target="_blank")
+          img(src="./images/wherebuy/image-shops-6.png", alt="Ашан")
+        a.shopsbg-item(href="https://lenta.com/", target="_blank")
+          img(src="./images/wherebuy/image-shops-5.png", alt="Лента")
