[UPDATE] Добавлен тултип на главной

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,7 @@
 @import "modules/recepts";
 @import "modules/wherebuy";
 @import "modules/animations";
+@import "modules/tooltip";
 
 @import 'components/main';
 
